[gd_scene load_steps=2 format=3 uid="uid://n3kcmu4ll3y3"]

[ext_resource type="Script" uid="uid://drk2a1fbhlrqe" path="res://scripts/config.gd" id="1_xdm34"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xdm34")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 204.0
offset_bottom = 191.0
color = Color(0.907065, 0.419381, 3.85046e-07, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 205.0
offset_bottom = 190.0
alignment = 1

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
text = "Cerrar"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
text = "Bordless"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
text = "Always on top"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
text = "Transparent Window"
